Fix column collapse issue in bio page.

--- a/styles.css
+++ b/styles.css
@@ -292,11 +292,13 @@ main {
   background-color: rgba(0, 153, 255, 0.4);
 }
 .bioInfo {
-  position:relative;
+  position:absolute;
+  right:0;
   height:100%;
   min-width:666px;
   width:65%;
   float:right;
+  overflow:hidden;
 }
 .bioInfo p {
   position:absolute;
@@ -307,7 +309,6 @@ main {
   padding: 15% 6% 5% 6%;
   font: small-caps italic .5em 'Arial', cursive;
   text-align:justify;
-  overflow-x: auto;
 }
 .title {
   position:absolute;
